# query-commander

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  build_pypi.sh  cleanup.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: _config.yml  about.md  changelog.md  index.md  roadmap.md
docs/configuration/: authenticator.md  basic.md  connections.md  options.md  profiler.md  tokenizer.md
docs/installation/: apache.md  aws.md
src/: index.py
src/code/: .htaccess  index.py  lambda_function.py
src/code/connectors/: __init__.py  mysqldb.py  oracle.py  postgres.py  redshift.py  selector.py
src/code/core/: __init__.py  authenticator.py  config.py  helpers.py  interactions.py  profiler.py  tokenizer.py
src/code/functions/: __init__.py  meta.py  query.py
src/config/: settings.yml
src/querycommander/: __init__.py  index.py  start.py
src/querycommander/connectors/: __init__.py  mysqldb.py  oracle.py  postgres.py  redshift.py  selector.py  trinodb.py
src/querycommander/connectors/extra_sql/: postgres_table.sql  redshift_tables.sql
src/querycommander/core/: authenticator.py  config.py  connections.py  helpers.py  interactions.py  profiler.py  tokenizer.py
src/querycommander/functions/: __init__.py  meta.py  query.py
src/querycommander/static/: index.html  script.js  structure.css  theme.css
src/static/: index.html  path.js  script.js  structure.css  theme.css
