[flake8]
ignore = E201,E202,W293,W291,W292 
#,E226,E302,E41
max-line-length = 160
exclude = tests/*
#max-complexity = 10

[metadata]
name = querycommander
author = lnxusr1
author_email = dist@querycommander.com
url = https://querycommander.com
download_url = https://github.com/lnxusr1/query-commander/releases/latest
version = attr: src.querycommander.start.VERSION
description = Browser-based SQL Query Tool for Universal Database Management
long_description = file: README.rst
keywords = 
license = MIT
home_page = https://querycommander.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Bug Tracker = https://github.com/lnxusr1/query-commander/issues
    Changelog = https://docs.querycommander.com/en/latest/changelog/

[build-system]
requires = 
    setuptools
    wheel
    
[options]
python_requires = >= 3.6
zip_safe = true
include_package_data = true
test_suite = tests
setup_requires = 
    setuptools
    wheel

install_requires =
    boto3

packages = find:
package_dir=
	=src

[options.packages.find]
where = src

[tool.setuptools]
include-package-data = true